--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,34 @@
-.container {
-  padding-bottom: 50px;
+
+h1 {
+  padding-bottom: 10px;
+}
+
+
+footer {
+  padding-left: 120px;
+}
+
+body {
+  background-color: aliceblue;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #map {
   height: 600px;
   margin-top: 20px;
+  position: static;
+
+}
+
+#info {
+  padding-bottom: 0px;
+}
+
+.container {
+  padding-bottom: 20px;
+}
+
+.scroll {
+  height: 500px;
+  overflow-y: auto;
 }
